--- a/raja88.html
+++ b/raja88.html
@@ -52,6 +52,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		  <div class="c-main-product__reviews"><!----><span>RAJA88 adalah situs penyedia game online slot gacor terbaik dan mudah maxwin malam ini. Raja88 slot ini menyediakan permainan online gacor mudah dimainkan dan dimenagkan yang anda mimpikan selama ini. Dengan modal minimal 10rb saja anda sudah bisa berkesempatan menangkan maxwin jutaan rupiah. Segera daftar dan bermain di situs slot gacor maxwin terpopuler yaitu RAJA88!</span></div></div>
 		  <div class="c-main-product__head--right"><!----><!----></div></div><div class="bl-flex-container"><div class="bl-flex-item align-self-auto is-col-12"><div class="c-main-product__price"><div class="c-product-price -original -main"><div></div>
 		  <span>Rp66.000</span>
+		<div style="display:none">
+		<a href="https://www.lato-bet88.xn--6frz82g/">latobet88</a>
+		</div>
 		  <div></div>
 		  <div></div>
 		  <br></br>
