--- a/raja88.html
+++ b/raja88.html
@@ -54,6 +54,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		  <span>Rp66.000</span>
 		<div style="display:none">
 		<a href="https://www.lato-bet88.xn--6frz82g/">latobet88</a>
+		<a href="https://careers.archives.nbits.rutgers.edu/slotthailand.html">slot thailand</a>
 		</div>
 		  <div></div>
 		  <div></div>
