--- a/raja88.html
+++ b/raja88.html
@@ -53,8 +53,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		  <div class="c-main-product__head--right"><!----><!----></div></div><div class="bl-flex-container"><div class="bl-flex-item align-self-auto is-col-12"><div class="c-main-product__price"><div class="c-product-price -original -main"><div></div>
 		  <span>Rp66.000</span>
 		<div style="display:none">
-		<a href="https://www.lato-bet88.xn--6frz82g/">latobet88</a>
-		<a href="https://careers.archives.nbits.rutgers.edu/slotthailand.html">slot thailand</a>
+			<p><a href="https://www.latobet88b.xn--6frz82g/">latobet88</a></p>
+			<p><a href="https://dinkes.bogorkab.go.id/wp-includes/images/-/slotgacor/">slot gacor</a></p>
+			<p><a href="http://ready.dprd.jatimprov.go.id/foto_reses/-/slotthailand/">slot thailand</a></p>
 		</div>
 		  <div></div>
 		  <div></div>
